--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,100 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <body>
-        <h1>Hi World!
-            </h1>
-    </body>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Indian Stundents in US</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        header {
+            background-color: #333;
+            color: white;
+            padding: 10px 0;
+            text-align: center;
+        }
+        nav {
+            display: flex;
+            justify-content: center;
+            background-color: #444;
+        }
+        nav a {
+            color: white;
+            padding: 14px 20px;
+            text-decoration: none;
+            text-align: center;
+        }
+        nav a:hover {
+            background-color: #555;
+        }
+        .container {
+            padding: 20px;
+        }
+        .section {
+            margin: 20px 0;
+            padding: 20px;
+            background-color: white;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        .footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
+<body>
+
+<header>
+    <h1>US Indian Students</h1>
+</header>
+
+<nav>
+    <a href="#home">Home</a>
+    <a href="#features">Features</a>
+    <a href="#about">About</a>
+    <a href="#contact">Contact</a>
+</nav>
+
+<div class="container">
+    <div id="home" class="section">
+        <h2>Home</h2>
+        <p>We are collecting the details for knowing the status of the students.</p>
+    </div>
+    <div id="features" class="section">
+        <h2>Features</h2>
+        <p>Explore the various features our application offers:</p>
+        <ul>
+            <li>Feature 1: Description of feature 1.</li>
+            <li>Feature 2: Description of feature 2.</li>
+            <li>Feature 3: Description of feature 3.</li>
+        </ul>
+    </div>
+    <div id="about" class="section">
+        <h2>About</h2>
+        <p>Learn more about our application and the team behind it.</p>
+    </div>
+    <div id="contact" class="section">
+        <h2>Contact</h2>
+        <p>Saikumar <br>
+        FAU Student <br>
+        <a href="www.gmail.com">sirangisaikumar@gmail.com</a><br>
+    9806160122</p>
+    </div>
+</div>
+
+<div class="footer">
+    <p>&copy; 2024 Your Company Name. All rights reserved.</p>
+</div>
+
+</body>
+</html>
